--- a/pegmatite/options.html
+++ b/pegmatite/options.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head><title>Pegmatite Options</title></head>
+<head>
+  <title>Pegmatite Options</title>
+  <meta charset="utf-8"/>
+  <style>
+    body: {
+      padding: 10px;
+    }
+  </style>
+</head>
 <body>
 <h1>Pegmatite Options</h1>
 
