update options.html typo
fix a style sheet language typo

--- a/pegmatite/options.html
+++ b/pegmatite/options.html
@@ -4,7 +4,7 @@
   <title>Pegmatite Options</title>
   <meta charset="utf-8"/>
   <style>
-    body: {
+    body {
       padding: 10px;
     }
   </style>
